testsuite/tests/ext_annotations/gen/invalidation/v1/main_c.c

int
ident (int x)
{
  return x;
}

int
main ()
{
  return 0;
}
